chore: changed name variables, formatation
